Parser/medcodelogic.js
// Generated by Peggy 3.0.2.
//
// https://peggyjs.org/

"use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { start: peg$parsestart };
  var peg$startRuleFunction = peg$parsestart;

  var peg$c0 = "or";
  var peg$c1 = "and";
  var peg$c2 = "+";
  var peg$c3 = "-";
  var peg$c4 = "*";
  var peg$c5 = "/";
  var peg$c6 = "where";
  var peg$c7 = "not";
  var peg$c8 = "in table";
  var peg$c9 = "s";
  var peg$c10 = "in list";
  var peg$c11 = "lookup";
  var peg$c12 = "in";
  var peg$c13 = "by";
  var peg$c14 = ",";
  var peg$c15 = "\"";
  var peg$c16 = "'";
  var peg$c17 = ">=";
  var peg$c18 = "<=";
  var peg$c19 = ">";
  var peg$c20 = "<";
  var peg$c21 = "=";
  var peg$c22 = "!=";
  var peg$c23 = "(";
  var peg$c24 = ")";
  var peg$c25 = " ";

  var peg$r0 = /^[_a-zA-Z]/;
  var peg$r1 = /^[_a-zA-Z0-9]/;
  var peg$r2 = /^[0-9]/;
  var peg$r3 = /^[^"]/;
  var peg$r4 = /^[^']/;
  var peg$r5 = /^[a-zA-Z0-9*]/;
  var peg$r6 = /^[.a-zA-Z0-9*]/;
  var peg$r7 = /^[\t\n\r]/;

  var peg$e0 = peg$literalExpectation("or", true);
  var peg$e1 = peg$literalExpectation("and", true);
  var peg$e2 = peg$literalExpectation("+", false);
  var peg$e3 = peg$literalExpectation("-", false);
  var peg$e4 = peg$literalExpectation("*", false);
  var peg$e5 = peg$literalExpectation("/", false);
  var peg$e6 = peg$literalExpectation("where", false);
  var peg$e7 = peg$literalExpectation("not", true);
  var peg$e8 = peg$literalExpectation("in table", true);
  var peg$e9 = peg$literalExpectation("s", true);
  var peg$e10 = peg$literalExpectation("in list", true);
  var peg$e11 = peg$literalExpectation("lookup", true);
  var peg$e12 = peg$literalExpectation("in", true);
  var peg$e13 = peg$literalExpectation("by", true);
  var peg$e14 = peg$literalExpectation(",", false);
  var peg$e15 = peg$classExpectation(["_", ["a", "z"], ["A", "Z"]], false, false);
  var peg$e16 = peg$classExpectation(["_", ["a", "z"], ["A", "Z"], ["0", "9"]], false, false);
  var peg$e17 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e18 = peg$literalExpectation("\"", false);
  var peg$e19 = peg$classExpectation(["\""], true, false);
  var peg$e20 = peg$literalExpectation("'", false);
  var peg$e21 = peg$classExpectation(["'"], true, false);
  var peg$e22 = peg$literalExpectation(">=", false);
  var peg$e23 = peg$literalExpectation("<=", false);
  var peg$e24 = peg$literalExpectation(">", false);
  var peg$e25 = peg$literalExpectation("<", false);
  var peg$e26 = peg$literalExpectation("=", false);
  var peg$e27 = peg$literalExpectation("!=", false);
  var peg$e28 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "*"], false, false);
  var peg$e29 = peg$classExpectation([".", ["a", "z"], ["A", "Z"], ["0", "9"], "*"], false, false);
  var peg$e30 = peg$literalExpectation("(", false);
  var peg$e31 = peg$literalExpectation(")", false);
  var peg$e32 = peg$literalExpectation(" ", false);
  var peg$e33 = peg$classExpectation(["\t", "\n", "\r"], false, false);

  var peg$f0 = function() { return text()};
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseor();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f0();
    }
    s0 = s1;

    return s0;
  }

  function peg$parseor() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parseand();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsespace();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsespace();
      }
      s3 = [];
      s4 = peg$currPos;
      if (input.substr(peg$currPos, 2).toLowerCase() === peg$c0) {
        s5 = input.substr(peg$currPos, 2);
        peg$currPos += 2;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s5 !== peg$FAILED) {
        s6 = [];
        s7 = peg$parsespace();
        while (s7 !== peg$FAILED) {
          s6.push(s7);
          s7 = peg$parsespace();
        }
        s7 = peg$parseand();
        if (s7 !== peg$FAILED) {
          s5 = [s5, s6, s7];
          s4 = s5;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$currPos;
        if (input.substr(peg$currPos, 2).toLowerCase() === peg$c0) {
          s5 = input.substr(peg$currPos, 2);
          peg$currPos += 2;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e0); }
        }
        if (s5 !== peg$FAILED) {
          s6 = [];
          s7 = peg$parsespace();
          while (s7 !== peg$FAILED) {
            s6.push(s7);
            s7 = peg$parsespace();
          }
          s7 = peg$parseand();
          if (s7 !== peg$FAILED) {
            s5 = [s5, s6, s7];
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      }
      s1 = [s1, s2, s3];
      s0 = s1;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseand() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parsecomparison();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsespace();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsespace();
      }
      s3 = [];
      s4 = peg$currPos;
      if (input.substr(peg$currPos, 3).toLowerCase() === peg$c1) {
        s5 = input.substr(peg$currPos, 3);
        peg$currPos += 3;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s5 !== peg$FAILED) {
        s6 = [];
        s7 = peg$parsespace();
        while (s7 !== peg$FAILED) {
          s6.push(s7);
          s7 = peg$parsespace();
        }
        s7 = peg$parsecomparison();
        if (s7 !== peg$FAILED) {
          s5 = [s5, s6, s7];
          s4 = s5;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$currPos;
        if (input.substr(peg$currPos, 3).toLowerCase() === peg$c1) {
          s5 = input.substr(peg$currPos, 3);
          peg$currPos += 3;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
        if (s5 !== peg$FAILED) {
          s6 = [];
          s7 = peg$parsespace();
          while (s7 !== peg$FAILED) {
            s6.push(s7);
            s7 = peg$parsespace();
          }
          s7 = peg$parsecomparison();
          if (s7 !== peg$FAILED) {
            s5 = [s5, s6, s7];
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      }
      s1 = [s1, s2, s3];
      s0 = s1;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsecomparison() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parsesum();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsespace();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsespace();
      }
      s3 = peg$currPos;
      s4 = peg$parseoperator();
      if (s4 !== peg$FAILED) {
        s5 = [];
        s6 = peg$parsespace();
        while (s6 !== peg$FAILED) {
          s5.push(s6);
          s6 = peg$parsespace();
        }
        s6 = peg$parsesum();
        if (s6 !== peg$FAILED) {
          s4 = [s4, s5, s6];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      s1 = [s1, s2, s3];
      s0 = s1;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsesum() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parseproduct();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsespace();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsespace();
      }
      s3 = [];
      s4 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 43) {
        s5 = peg$c2;
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s5 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 45) {
          s5 = peg$c3;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e3); }
        }
      }
      if (s5 !== peg$FAILED) {
        s6 = [];
        s7 = peg$parsespace();
        while (s7 !== peg$FAILED) {
          s6.push(s7);
          s7 = peg$parsespace();
        }
        s7 = peg$parseproduct();
        if (s7 !== peg$FAILED) {
          s5 = [s5, s6, s7];
          s4 = s5;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 43) {
          s5 = peg$c2;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s5 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 45) {
            s5 = peg$c3;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e3); }
          }
        }
        if (s5 !== peg$FAILED) {
          s6 = [];
          s7 = peg$parsespace();
          while (s7 !== peg$FAILED) {
            s6.push(s7);
            s7 = peg$parsespace();
          }
          s7 = peg$parseproduct();
          if (s7 !== peg$FAILED) {
            s5 = [s5, s6, s7];
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      }
      s1 = [s1, s2, s3];
      s0 = s1;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseproduct() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parsewhere();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsespace();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsespace();
      }
      s3 = [];
      s4 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 42) {
        s5 = peg$c4;
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e4); }
      }
      if (s5 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 47) {
          s5 = peg$c5;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e5); }
        }
      }
      if (s5 !== peg$FAILED) {
        s6 = [];
        s7 = peg$parsespace();
        while (s7 !== peg$FAILED) {
          s6.push(s7);
          s7 = peg$parsespace();
        }
        s7 = peg$parsein_table();
        if (s7 !== peg$FAILED) {
          s5 = [s5, s6, s7];
          s4 = s5;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 42) {
          s5 = peg$c4;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e4); }
        }
        if (s5 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 47) {
            s5 = peg$c5;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e5); }
          }
        }
        if (s5 !== peg$FAILED) {
          s6 = [];
          s7 = peg$parsespace();
          while (s7 !== peg$FAILED) {
            s6.push(s7);
            s7 = peg$parsespace();
          }
          s7 = peg$parsein_table();
          if (s7 !== peg$FAILED) {
            s5 = [s5, s6, s7];
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      }
      s1 = [s1, s2, s3];
      s0 = s1;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsewhere() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    s1 = peg$parsein_table();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsespace();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsespace();
      }
      s3 = peg$currPos;
      if (input.substr(peg$currPos, 5) === peg$c6) {
        s4 = peg$c6;
        peg$currPos += 5;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e6); }
      }
      if (s4 !== peg$FAILED) {
        s5 = [];
        s6 = peg$parsespace();
        while (s6 !== peg$FAILED) {
          s5.push(s6);
          s6 = peg$parsespace();
        }
        s6 = peg$parselparen();
        if (s6 === peg$FAILED) {
          s6 = null;
        }
        s7 = peg$parseor();
        if (s7 !== peg$FAILED) {
          s8 = peg$parserparen();
          if (s8 === peg$FAILED) {
            s8 = null;
          }
          s9 = [];
          s10 = peg$parsespace();
          while (s10 !== peg$FAILED) {
            s9.push(s10);
            s10 = peg$parsespace();
          }
          s4 = [s4, s5, s6, s7, s8, s9];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      s1 = [s1, s2, s3];
      s0 = s1;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsein_table() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = peg$parsein_list();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsespace();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsespace();
      }
      s3 = peg$currPos;
      s4 = peg$currPos;
      if (input.substr(peg$currPos, 3).toLowerCase() === peg$c7) {
        s5 = input.substr(peg$currPos, 3);
        peg$currPos += 3;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e7); }
      }
      if (s5 === peg$FAILED) {
        s5 = null;
      }
      s6 = [];
      s7 = peg$parsespace();
      while (s7 !== peg$FAILED) {
        s6.push(s7);
        s7 = peg$parsespace();
      }
      if (input.substr(peg$currPos, 8).toLowerCase() === peg$c8) {
        s7 = input.substr(peg$currPos, 8);
        peg$currPos += 8;
      } else {
        s7 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e8); }
      }
      if (s7 !== peg$FAILED) {
        if (input.substr(peg$currPos, 1).toLowerCase() === peg$c9) {
          s8 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s8 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e9); }
        }
        if (s8 === peg$FAILED) {
          s8 = null;
        }
        s5 = [s5, s6, s7, s8];
        s4 = s5;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parselparen();
        if (s5 !== peg$FAILED) {
          s6 = peg$parsetable_list();
          s7 = peg$parserparen();
          if (s7 !== peg$FAILED) {
            s8 = [];
            s9 = peg$parsespace();
            while (s9 !== peg$FAILED) {
              s8.push(s9);
              s9 = peg$parsespace();
            }
            s4 = [s4, s5, s6, s7, s8];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      s1 = [s1, s2, s3];
      s0 = s1;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsein_list() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = peg$parsesimple_expression();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsespace();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsespace();
      }
      s3 = peg$currPos;
      s4 = peg$currPos;
      if (input.substr(peg$currPos, 3).toLowerCase() === peg$c7) {
        s5 = input.substr(peg$currPos, 3);
        peg$currPos += 3;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e7); }
      }
      if (s5 === peg$FAILED) {
        s5 = null;
      }
      s6 = [];
      s7 = peg$parsespace();
      while (s7 !== peg$FAILED) {
        s6.push(s7);
        s7 = peg$parsespace();
      }
      if (input.substr(peg$currPos, 7).toLowerCase() === peg$c10) {
        s7 = input.substr(peg$currPos, 7);
        peg$currPos += 7;
      } else {
        s7 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e10); }
      }
      if (s7 !== peg$FAILED) {
        s5 = [s5, s6, s7];
        s4 = s5;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parselparen();
        if (s5 !== peg$FAILED) {
          s6 = peg$parsecode_list();
          s7 = peg$parserparen();
          if (s7 !== peg$FAILED) {
            s8 = [];
            s9 = peg$parsespace();
            while (s9 !== peg$FAILED) {
              s8.push(s9);
              s9 = peg$parsespace();
            }
            s4 = [s4, s5, s6, s7, s8];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      s1 = [s1, s2, s3];
      s0 = s1;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsesimple_expression() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parselookup();
    if (s1 === peg$FAILED) {
      s1 = peg$parsefunction_call();
      if (s1 === peg$FAILED) {
        s1 = peg$parseidentifier();
        if (s1 === peg$FAILED) {
          s1 = peg$parseconstant();
          if (s1 === peg$FAILED) {
            s1 = peg$currPos;
            s2 = peg$parselparen();
            if (s2 !== peg$FAILED) {
              s3 = [];
              s4 = peg$parsespace();
              while (s4 !== peg$FAILED) {
                s3.push(s4);
                s4 = peg$parsespace();
              }
              s4 = peg$parseor();
              if (s4 !== peg$FAILED) {
                s5 = [];
                s6 = peg$parsespace();
                while (s6 !== peg$FAILED) {
                  s5.push(s6);
                  s6 = peg$parsespace();
                }
                s6 = peg$parserparen();
                if (s6 !== peg$FAILED) {
                  s2 = [s2, s3, s4, s5, s6];
                  s1 = s2;
                } else {
                  peg$currPos = s1;
                  s1 = peg$FAILED;
                }
              } else {
                peg$currPos = s1;
                s1 = peg$FAILED;
              }
            } else {
              peg$currPos = s1;
              s1 = peg$FAILED;
            }
          }
        }
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsespace();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsespace();
      }
      s1 = [s1, s2];
      s0 = s1;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseconstant() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parsestring();
    if (s1 === peg$FAILED) {
      s1 = peg$parsenumber();
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsespace();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsespace();
      }
      s1 = [s1, s2];
      s0 = s1;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsefunction_call() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parseidentifier();
    if (s1 !== peg$FAILED) {
      s2 = peg$parselparen();
      if (s2 !== peg$FAILED) {
        s3 = peg$parselist();
        s4 = peg$parserparen();
        if (s4 !== peg$FAILED) {
          s5 = [];
          s6 = peg$parsespace();
          while (s6 !== peg$FAILED) {
            s5.push(s6);
            s6 = peg$parsespace();
          }
          s1 = [s1, s2, s3, s4, s5];
